# cpputest_example

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: cmake.yml
docs/: unit_test.uxf
src/: CMakeLists.txt  main.c  pythagorean.c  pythagorean.h  square_root.c  square_root.h
tests/: CMakeLists.txt  cpputest_common.cmake  cpputest_external_proj.cmake
tests/pythagorean_ut/: CMakeLists.txt  pythagorean_ut.cpp  square_root_mock.cpp
testtools/: CMakeLists.txt
testtools/cpputest/: CMakeIntegration-README.md  CMakeLists.txt  CommandLineArguments.cpp  CommandLineTestRunner.cpp  JUnitTestOutput.cpp  MemoryLeakDetector.cpp  MemoryLeakWarningPlugin.cpp  SimpleMutex.cpp  SimpleString.cpp  TeamCityTestOutput.cpp  TestFailure.cpp  TestFilter.cpp  TestHarness_c.cpp  TestMemoryAllocator.cpp  TestOutput.cpp  TestPlugin.cpp  TestRegistry.cpp  TestResult.cpp  TestTestingFixture.cpp  Utest.cpp  UtestPlatform.cpp
testtools/cpputest/CppUTest/: CommandLineArguments.h  CommandLineTestRunner.h  CppUTestConfig.h  CppUTestGeneratedConfig.h  JUnitTestOutput.h  MemoryLeakDetector.h  MemoryLeakDetectorMallocMacros.h  MemoryLeakDetectorNewMacros.h  MemoryLeakWarningPlugin.h  PlatformSpecificFunctions.h  PlatformSpecificFunctions_c.h  SimpleMutex.h  SimpleString.h  StandardCLibrary.h  TeamCityTestOutput.h  TestFailure.h  TestFilter.h  TestHarness.h  TestHarness_c.h  TestMemoryAllocator.h  TestOutput.h  TestPlugin.h  TestRegistry.h  TestResult.h  TestTestingFixture.h  Utest.h  UtestMacros.h
testtools/cpputestext/: CMakeLists.txt  CodeMemoryReportFormatter.cpp  IEEE754ExceptionsPlugin.cpp  MemoryReportAllocator.cpp  MemoryReportFormatter.cpp  MemoryReporterPlugin.cpp  MockActualCall.cpp  MockExpectedCall.cpp  MockExpectedCallsList.cpp  MockFailure.cpp  MockNamedValue.cpp  MockSupport.cpp  MockSupportPlugin.cpp  MockSupport_c.cpp  OrderedTest.cpp
testtools/cpputestext/CppUTestExt/: CodeMemoryReportFormatter.h  GMock.h  GTest.h  GTestConvertor.h  IEEE754ExceptionsPlugin.h  MemoryReportAllocator.h  MemoryReportFormatter.h  MemoryReporterPlugin.h  MockActualCall.h  MockCheckedActualCall.h  MockCheckedExpectedCall.h  MockExpectedCall.h  MockExpectedCallsList.h  MockFailure.h  MockNamedValue.h  MockSupport.h  MockSupportPlugin.h  MockSupport_c.h  OrderedTest.h
